--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
     margin: 0px;
 }
 
-/* footer */
+/* footer styling */
 
 footer {
     height: 150px;
@@ -30,12 +30,10 @@ footer > ul {
 }
 
 footer > ul > li {
-    text-align: center;
     list-style: none;
 }
 
 footer > p {
-    text-align: center;
     text-transform: capitalize;
     padding-top: 30px;
     font-family: Anton, sans-serif;
@@ -43,6 +41,14 @@ footer > p {
     font-size: 150%;
     text-transform: uppercase;
     color: #563D4D;
+}
+
+.social-links > li {
+    display: inline;
+}
+
+footer {
+    text-align: center;
 }
 
 /*Homepage style rules*/
@@ -81,7 +87,7 @@ h2 {
     text-transform: uppercase;
     background-color: #FFDB58;
     padding: 40px;
-    border-radius: 40%;
+    border-radius: 5%;
     margin: auto;
 }
 
@@ -109,19 +115,40 @@ h2 {
 /* nav */
 #nav-home{
     background-color: #EFF3EB;
+    height: 81vh;
+    position: relative;
+
+}
+
+#nav-home > ul{
+list-style: none;
+}
+
+.nav-home-card-left {
+    border: 3px solid #563D4D;
+    border-radius: 10%;
+    height: 250px;
+    margin: 30px 10px;
+    width: 40%;
+    float: left;
+    text-align: center;
+    letter-spacing: 8px;
+}
+
+.nav-home-card-right {
+    border: 3px solid #563D4D;
+    border-radius: 10%;
+    height: 250px;
+    margin: 30px 10px;
+    width: 40%;
+    float: right;
+    text-align: center;
+    letter-spacing: 4px;
 }
 
 #grey-bar{
     height: 20px;
-    margin-top: 30px;
-    margin-bottom: 15px;
     background-color: #acb7bb;
-}
-
-.nav-home-card {
-    border: 3px solid #563D4D;
-    height: 200px;
-    width: 150px;
-    display: block;
-    margin: 10px;
+    position: relative;
+    top: 96%;
 }
