Add styling for the navbar menu: color, font, and text positioning

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,6 +194,8 @@ list-style: none;
 #nav-main {
     background-color: #EFF3EB;
     padding-top: 10px;
+    height: 40vh;
+    position: relative;
 }
 
 #nav-logo > h1 {
@@ -216,8 +218,40 @@ list-style: none;
     max-width: 75px;
     max-height: 75px;
     background-color: #FFDB58;
-    margin: 10px;
+    margin: 2%;
     padding: 5%;
     border-radius: 5%;
+    float: left;
+}
+
+#nav-menu {
+    list-style: none;
+    float: right;
+    width: 60%;
+    text-align: right;
+    margin-right: 2%;
+    margin-top: 30%;
+}
+
+#nav-menu > li > a {
+    text-decoration: none;
+    list-style: none;
+    color: #563D4D;
+    font-size: 65%;
+    font-family: Anton, sans-serif;
+    text-transform: uppercase;
+}
+
+#nav-menu > li {
     display: inline;
+    margin: 1%;
+}
+
+#nav-main > hr {
+    border: 1px solid #563D4D;
+    bottom: 0;
+    width: 95%;
+    margin: auto;
+    margin-bottom: 0;
+    background-color: #563D4D;
 }
