add photo sources to src attributes of img tags in bio section. add rough picture positioning.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -338,6 +338,19 @@ height: 100px;
     color: #EFF3EB;
 } 
 
+.bio-pic-left, .bio-pic-right {
+    max-width: 60px;
+    max-height: 60px;
+}
+
+.bio-pic-left {
+    float: left;
+}
+
+.bio-pic-right {
+    float: right;
+}
+
 #book-now {
     padding: 20px;
     text-align: center;
