--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,3 +426,14 @@ height: 100px;
     font-size: 90%;
 }
 
+#reviews-section {
+    background-color: #EFF3EB;
+}
+
+#reviews-section > div {
+    background-color: #acb7bb;
+    padding: 10px;
+    width: 300px;
+    height: 100px;
+    border-radius: 5%;
+}
