--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,18 +426,36 @@ height: 100px;
     font-size: 90%;
 }
 
-#reviews-section {
+.reviews-section {
     background-color: #EFF3EB;
+    padding: 40px;
 }
 
-#reviews-section > div {
+.reviews-section > div {
     background-color: #acb7bb;
     padding: 10px;
     width: 300px;
     height: 100px;
     border-radius: 5%;
+    margin: auto;
 }
 
-#reviews-section > img {
-    
+#review-image1, #review-image2, #review-image3 {
+    width: 300px;
+    height: 100px;
+    background-color: #EFF3EB;
+    padding: 0px;
+    margin: auto;
+    margin-top: 40px;
+    margin-bottom: 80px;
+    border-radius: 5%;
 }
+
+#review-image2{
+    height: 160px;
+}
+
+#review-image1 > img, #review-image2 > img, #review-image3 > img {
+    max-width: 100%;
+}
+
