--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,6 +352,8 @@ height: 100px;
     font-weight: 400;
     background-color: #EFF3EB;
     padding-bottom: 50px;
+
+line-height: 40px;
 }
 
 #book-now > p > a > span {
@@ -428,12 +430,11 @@ height: 100px;
 
 .reviews-section {
     background-color: #EFF3EB;
-    padding: 40px;
 }
 
 .reviews-section > div {
     background-color: #acb7bb;
-    padding: 10px;
+    padding: 20px 0;
     width: 300px;
     height: 100px;
     border-radius: 5%;
