--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -434,11 +434,12 @@ line-height: 40px;
 
 .reviews-section > div {
     background-color: #acb7bb;
-    padding: 20px 0;
-    width: 300px;
+    padding: 20px 10px;
+    width: 250px;
     height: 100px;
     border-radius: 5%;
     margin: auto;
+    position: relative;
 }
 
 #review-image1, #review-image2, #review-image3 {
@@ -458,5 +459,16 @@ line-height: 40px;
 
 #review-image1 > img, #review-image2 > img, #review-image3 > img {
     max-width: 100%;
+    border-radius: 2.5%;
 }
 
+.review {
+    float: left;
+}
+
+.customer {
+    float: right;
+    position: absolute;
+    bottom: 20px;
+    right: 10px;
+}
