--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,8 +72,8 @@ footer {
     height: 100vh;
     width: 100%;
     background-color: #BB4F78;
-    background: url(../images/sitephotos/Joe2019v2.jpg) no-repeat;
-    background-size: 150%;
+    background: url(../images/sitephotos/Joe2019v2.jpg) no-repeat center center;
+    background-size: 100%;
     background-attachment: fixed;
     padding-top: 45px;
 }
@@ -115,7 +115,7 @@ h2 {
     text-align: center;
     margin: auto;
     margin-top: 3%;
-    background-color: #acb7bbb3;
+    background-color: #acb7bb;
     width: 30%;
     min-width: 200px;
 }
