--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -477,9 +477,33 @@ line-height: 40px;
 /*Header*/
 
 #contact-header {
-    min-height:  340px;;
+    min-height:  300px;;
     background-color: #EFF3EB;
     border-bottom: 20px solid #acb7bb;
+}
+
+#contact-header-title {
+    float: right;
+    max-width: 40%;
+    padding-right: 10%;
+}
+
+#contact-header-title > h2 {
+    letter-spacing: 2px;
+    font-size: 100%;
+}
+
+#contact-header-image {
+    float: left;
+    max-width: 40%;
+    padding-left: 10%;
+    padding-top: 30px;
+}
+
+#contact-header-image > img {
+    width: 90%;
+    padding-left: 5px;
+    max-height: 280px;
 }
 
 /*#contact-header-title {
