--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -306,14 +306,22 @@ height: 100px;
     background-color: #BB4F78;
     height: 85px;
     padding: 5px;
+    padding-bottom: 8px;
 }
 
 .bio-text {
     color: #EFF3EB;
 }
 
+.bio-text > h3 {
+    font-size: 115%;
+    letter-spacing: 2px;
+    padding-bottom: 5px;
+}
+
 .bio-pic {
     max-height: 85px;
+    border: 2px solid #acb7bb;
 }
 
 .bio-pic > img {
@@ -329,44 +337,6 @@ height: 100px;
     float: right;
     max-width: 50%;
 }
-
-/*.about-bio > p {
-    height: 35px;
-    width: 50%;
-}
-
-.about-bio-left > h3 {
- float: left;
-} 
-
-.about-bio-left > p {
-    float: left;
-} 
-
-.about-bio-right > h3 {
-    float: right;
-} 
-
-.about-bio-right > p {
-    float: right;
-} 
-
-.about-bio > h3 {
-    color: #EFF3EB;
-} 
-
-.bio-pic-left, .bio-pic-right {
-    max-width: 60px;
-    max-height: 60px;
-}
-
-.bio-pic-left {
-    float: left;
-}
-
-.bio-pic-right {
-    float: right;
-} */
 
 #book-now {
     padding: 20px;
