--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,18 +269,22 @@ list-style: none;
 
 #about-header {
     background-color: #acb7bb;
-    padding: 5px;
+    padding: 5%;
 }
 
-#about-header > div {
-display: inline;
-width: 50%;
-height: 100px;
+#about-header > img {
+    margin-top: 10%;
+    border: 2px solid #FFDB58;
 }
 
 #about-body {
     background-color: #EFF3EB;
     padding: 30px 10px;
+}
+
+#about-body > h3 {
+    margin-bottom: 5%;
+    font-size: 150%;
 }
 
 #whole-band-pic {
@@ -314,9 +318,9 @@ height: 100px;
 }
 
 .bio-text > h3 {
-    font-size: 115%;
     letter-spacing: 2px;
     padding-bottom: 5px;
+    font-size: 115%;
 }
 
 .bio-pic {
@@ -336,6 +340,7 @@ height: 100px;
 .about-bio-right {
     float: right;
     max-width: 50%;
+    text-align: right;
 }
 
 #book-now {
