make logo in top left corner  highlight on mouse hover.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,6 +229,10 @@ list-style: none;
     float: left;
 }
 
+#nav-logo:hover {
+    border: 4px solid #BB4F78;
+}
+
 #nav-menu {
     list-style: none;
     float: right;
