--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/*STYLE RULES FOR WHOLE WEBSITE*/
+/*STYLE RULES COMMON ACROSS WEBSITE*/
 
 
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Commissioner:wght@300&display=swap');
@@ -77,7 +77,7 @@ footer {
     padding-top: 45px;
 }
 
-/*Logo and logo's text*/
+/*Logo and logo text*/
 
 h1, h2 {
     font-family: Anton, sans-serif;
@@ -134,7 +134,7 @@ h2 {
     margin-top: 4%;
 }
 
-/* nav for home page */
+/* home page nav section */
 
 #nav-home{
     background-color: #EFF3EB;
@@ -282,7 +282,7 @@ list-style: none;
     background-color: #563D4D;
 } 
 
-/* About Page */
+/* About header */
 
 #about-header {
     background-color: #acb7bb;
@@ -308,6 +308,8 @@ list-style: none;
     width: 100%;
     margin-bottom: 30px;
 }
+
+/* About bio section */
 
 #about-body > h3 {
     text-align: center;
@@ -360,14 +362,15 @@ list-style: none;
     text-align: right;
 }
 
+/* book now button */
+
 #book-now {
     padding: 20px;
     text-align: center;
     font-weight: 400;
     background-color: #EFF3EB;
     padding-bottom: 50px;
-
-line-height: 40px;
+    line-height: 40px;
 }
 
 #book-now > p > a > span {
@@ -614,3 +617,8 @@ input, textarea {
     font-size: 120%;
     padding-top: 10%;
 }
+
+/* MEDIA QUERIES */
+
+/* Rules for tablets and larger */
+
