--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -414,11 +414,12 @@ list-style: none;
 
 #video-card {
     height: 180px;
-    width: 90%;
+    width: 290px;
+    margin: auto;
     background-color: #BB4F78;
     margin: auto;
     padding-top: 35px;
-    border-radius: 5%;
+    border-radius: 2%;
 }
 
 #soundcloud-card {
@@ -427,7 +428,7 @@ list-style: none;
     background-color: #BB4F78;
     margin: auto;
     padding-top: 40px;
-    border-radius: 5%;
+    border-radius: 2%;
 }
 
 #soundcloud-card > iframe {
@@ -716,6 +717,11 @@ h1, h2 {
 }
 
 /* media */
+
+#media-section > p {
+    font-size: 110%;
+    font-weight: 450;
+}
 
 /* contact */
 #contact-header-title {
