--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -721,9 +721,18 @@ h1, h2 {
 #media-section > p {
     font-size: 110%;
     font-weight: 450;
+    max-width: 500px;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+#soundcloud-card {
+    max-width: 540px;
 }
 
 /* contact */
+
 #contact-header-title {
     float: right;
     max-width: 40%;
